# vfxdirs

./: LICENSE  README.md  pyproject.toml
src/vfxdirs/: __init__.py  _cli.py  api.py  config.py  context.py  keys.py  main.py
src/vfxdirs/providers/: __init__.py  blender.py  houdini.py  maya.py  nuke.py
