[project]
name = "vfxdirs"
version = "0.1.0"
description = "A library for easily accessing useful paths for common visual effects software on any operating system."
readme = "README.md"
authors = [
    { name = "Ben Cressman", email = "ben@utdallas.edu" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
vfxdirs = "vfxdirs:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
